[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Passdoor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Level6.gd" type="Script" id=2]
[ext_resource path="res://scenes/TileMap.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Passkey6.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Pixel.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/Walk Pass/levels/6.png" type="Texture" id=6]
[ext_resource path="res://scenes/Player6.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Wall Priz6.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 5 )

[node name="Level6" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -327698, 15, 0, -327697, 15, 0, -327696, 15, 0, -327695, 15, 0, -327694, 15, 0, -327693, 15, 0, -327692, 15, 0, -327691, 15, 0, -327690, 15, 0, -327689, 15, 0, -327688, 15, 0, -327687, 15, 0, -327686, 15, 0, -327685, 15, 0, -327684, 15, 0, -327683, 15, 0, -327682, 15, 0, -327681, 15, 0, -393216, 15, 0, -393215, 15, 0, -393214, 15, 0, -393213, 15, 0, -393212, 15, 0, -393211, 15, 0, -393210, 15, 0, -393209, 15, 0, -393208, 15, 0, -393207, 15, 0, -393206, 15, 0, -393205, 15, 0, -393204, 15, 0, -393203, 15, 0, -262162, 15, 0, -262161, 15, 0, -262160, 15, 0, -262159, 15, 0, -262158, 15, 0, -262157, 15, 0, -262156, 15, 0, -262155, 15, 0, -262154, 15, 0, -262153, 15, 0, -262152, 15, 0, -262151, 15, 0, -262150, 15, 0, -262149, 15, 0, -262148, 15, 0, -262147, 15, 0, -262146, 15, 0, -262145, 15, 0, -327680, 15, 0, -327679, 15, 0, -327678, 15, 0, -327677, 15, 0, -327676, 15, 0, -327675, 15, 0, -327674, 15, 0, -327673, 15, 0, -327672, 15, 0, -327671, 15, 0, -327670, 15, 0, -327669, 15, 0, -327668, 15, 0, -327667, 15, 0, -196626, 15, 0, -196625, 15, 0, -196624, 10, 0, -196623, 10, 0, -196622, 10, 0, -196621, 10, 0, -196620, 10, 0, -196619, 10, 0, -196618, 10, 0, -196617, 10, 0, -196616, 10, 0, -196615, 10, 0, -196614, 10, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 0, -196609, 10, 0, -262144, 15, 0, -262143, 10, 0, -262142, 10, 0, -262141, 10, 0, -262140, 15, 0, -262139, 10, 0, -262138, 15, 0, -262137, 10, 0, -262136, 15, 0, -262135, 10, 0, -262134, 10, 0, -262133, 10, 0, -262132, 15, 0, -262131, 15, 0, -131090, 15, 0, -131089, 15, 0, -131088, 10, 0, -131087, 15, 0, -131086, 15, 0, -131085, 15, 0, -131084, 15, 0, -131083, 15, 0, -131082, 15, 0, -131081, 15, 0, -131080, 15, 0, -131079, 15, 0, -131078, 15, 0, -131077, 15, 0, -131076, 15, 0, -131075, 15, 0, -131074, 15, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 15, 0, -196605, 10, 0, -196604, 15, 0, -196603, 10, 0, -196602, 15, 0, -196601, 10, 0, -196600, 15, 0, -196599, 10, 0, -196598, 15, 0, -196597, 10, 0, -196596, 15, 0, -196595, 15, 0, -65554, 15, 0, -65553, 15, 0, -65552, 10, 0, -65551, 10, 0, -65550, 10, 0, -65549, 10, 0, -65548, 10, 0, -65547, 10, 0, -65546, 10, 0, -65545, 10, 0, -65544, 10, 0, -65543, 10, 0, -65542, 10, 0, -65541, 10, 0, -65540, 10, 0, -65539, 10, 0, -65538, 15, 0, -65537, 10, 0, -131072, 15, 0, -131071, 10, 0, -131070, 15, 0, -131069, 10, 0, -131068, 15, 0, -131067, 10, 0, -131066, 15, 0, -131065, 10, 0, -131064, 15, 0, -131063, 10, 0, -131062, 15, 0, -131061, 10, 0, -131060, 15, 0, -131059, 15, 0, -18, 15, 0, -17, 15, 0, -16, 15, 0, -15, 15, 0, -14, 15, 0, -13, 15, 0, -12, 15, 0, -11, 15, 0, -10, 15, 0, -9, 15, 0, -8, 15, 0, -7, 10, 0, -6, 15, 0, -5, 15, 0, -4, 15, 0, -3, 15, 0, -2, 15, 0, -1, 10, 0, -65536, 15, 0, -65535, 15, 0, -65534, 15, 0, -65533, 10, 0, -65532, 15, 0, -65531, 10, 0, -65530, 15, 0, -65529, 10, 0, -65528, 15, 0, -65527, 10, 0, -65526, 15, 0, -65525, 10, 0, -65524, 15, 0, -65523, 15, 0, 65518, 15, 0, 65519, 15, 0, 65520, 10, 0, 65521, 10, 0, 65522, 10, 0, 65523, 10, 0, 65524, 10, 0, 65525, 10, 0, 65526, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 15, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 15, 0, 1, 10, 0, 2, 15, 0, 3, 10, 0, 4, 15, 0, 5, 10, 0, 6, 15, 0, 7, 10, 0, 8, 15, 0, 9, 10, 0, 10, 15, 0, 11, 10, 0, 12, 15, 0, 13, 15, 0, 131054, 15, 0, 131055, 15, 0, 131056, 10, 0, 131057, 15, 0, 131058, 15, 0, 131059, 15, 0, 131060, 15, 0, 131061, 15, 0, 131062, 15, 0, 131063, 15, 0, 131064, 15, 0, 131065, 10, 0, 131066, 15, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 10, 0, 131071, 10, 0, 65536, 15, 0, 65537, 10, 0, 65538, 15, 0, 65539, 10, 0, 65540, 15, 0, 65541, 10, 0, 65542, 15, 0, 65543, 10, 0, 65544, 15, 0, 65545, 10, 0, 65546, 15, 0, 65547, 10, 0, 65548, 15, 0, 65549, 15, 0, 196590, 15, 0, 196591, 15, 0, 196592, 10, 0, 196593, 15, 0, 196594, 10, 0, 196595, 10, 0, 196596, 10, 0, 196597, 10, 0, 196598, 15, 0, 196599, 10, 0, 196600, 15, 0, 196601, 10, 0, 196602, 15, 0, 196603, 15, 0, 196604, 15, 0, 196605, 15, 0, 196606, 15, 0, 196607, 15, 0, 131072, 15, 0, 131073, 10, 0, 131074, 15, 0, 131075, 10, 0, 131076, 15, 0, 131077, 10, 0, 131078, 15, 0, 131079, 15, 0, 131080, 15, 0, 131081, 10, 0, 131082, 15, 0, 131083, 10, 0, 131084, 15, 0, 131085, 15, 0, 262126, 15, 0, 262127, 15, 0, 262128, 10, 0, 262129, 15, 0, 262130, 10, 0, 262131, 15, 0, 262132, 10, 0, 262133, 10, 0, 262134, 15, 0, 262135, 10, 0, 262136, 15, 0, 262137, 10, 0, 262138, 10, 0, 262139, 10, 0, 262140, 10, 0, 262141, 10, 0, 262142, 10, 0, 262143, 10, 0, 196608, 10, 0, 196609, 10, 0, 196610, 15, 0, 196611, 10, 0, 196612, 15, 0, 196613, 10, 0, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 10, 0, 196618, 15, 0, 196619, 10, 0, 196620, 15, 0, 196621, 15, 0, 327662, 15, 0, 327663, 15, 0, 327664, 10, 0, 327665, 15, 0, 327666, 10, 0, 327667, 15, 0, 327668, 10, 0, 327669, 15, 0, 327670, 15, 0, 327671, 10, 0, 327672, 15, 0, 327673, 15, 0, 327674, 15, 0, 327675, 15, 0, 327676, 15, 0, 327677, 15, 0, 327678, 15, 0, 327679, 15, 0, 262144, 15, 0, 262145, 10, 0, 262146, 15, 0, 262147, 10, 0, 262148, 15, 0, 262149, 10, 0, 262150, 15, 0, 262151, 15, 0, 262152, 15, 0, 262153, 15, 0, 262154, 15, 0, 262155, 10, 0, 262156, 15, 0, 262157, 15, 0, 393198, 15, 0, 393199, 15, 0, 393200, 10, 0, 393201, 15, 0, 393202, 10, 0, 393203, 15, 0, 393204, 10, 0, 393205, 15, 0, 393206, 10, 0, 393207, 10, 0, 393208, 10, 0, 393209, 10, 0, 393210, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 0, 393214, 10, 0, 393215, 10, 0, 327680, 10, 0, 327681, 10, 0, 327682, 15, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 0, 327687, 10, 0, 327688, 10, 0, 327689, 15, 0, 327690, 10, 0, 327691, 10, 0, 327692, 15, 0, 327693, 15, 0, 458734, 15, 0, 458735, 15, 0, 458736, 10, 0, 458737, 15, 0, 458738, 10, 0, 458739, 15, 0, 458740, 10, 0, 458741, 15, 0, 458742, 15, 0, 458743, 15, 0, 458744, 15, 0, 458745, 10, 0, 458746, 15, 0, 458747, 15, 0, 458748, 15, 0, 458749, 15, 0, 458750, 15, 0, 458751, 15, 0, 393216, 15, 0, 393217, 15, 0, 393218, 15, 0, 393219, 15, 0, 393220, 15, 0, 393221, 15, 0, 393222, 15, 0, 393223, 15, 0, 393224, 15, 0, 393225, 15, 0, 393226, 15, 0, 393227, 10, 0, 393228, 15, 0, 393229, 15, 0, 524270, 15, 0, 524271, 15, 0, 524272, 10, 0, 524273, 15, 0, 524274, 10, 0, 524275, 15, 0, 524276, 10, 0, 524277, 10, 0, 524278, 10, 0, 524279, 10, 0, 524280, 15, 0, 524281, 10, 0, 524282, 15, 0, 524283, 10, 0, 524284, 15, 0, 524285, 10, 0, 524286, 15, 0, 524287, 10, 0, 458752, 10, 0, 458753, 15, 0, 458754, 10, 0, 458755, 10, 0, 458756, 15, 0, 458757, 10, 0, 458758, 10, 0, 458759, 10, 0, 458760, 15, 0, 458761, 10, 0, 458762, 10, 0, 458763, 10, 0, 458764, 15, 0, 458765, 15, 0, 589806, 15, 0, 589807, 15, 0, 589808, 10, 0, 589809, 15, 0, 589810, 10, 0, 589811, 15, 0, 589812, 15, 0, 589813, 15, 0, 589814, 15, 0, 589815, 10, 0, 589816, 15, 0, 589817, 10, 0, 589818, 15, 0, 589819, 10, 0, 589820, 10, 0, 589821, 10, 0, 589822, 15, 0, 589823, 10, 0, 524288, 10, 0, 524289, 15, 0, 524290, 10, 0, 524291, 10, 0, 524292, 15, 0, 524293, 10, 0, 524294, 10, 0, 524295, 10, 0, 524296, 10, 0, 524297, 10, 0, 524298, 10, 0, 524299, 10, 0, 524300, 15, 0, 524301, 15, 0, 655342, 15, 0, 655343, 15, 0, 655344, 10, 0, 655345, 10, 0, 655346, 10, 0, 655347, 10, 0, 655348, 10, 0, 655349, 10, 0, 655350, 15, 0, 655351, 10, 0, 655352, 15, 0, 655353, 10, 0, 655354, 15, 0, 655355, 10, 0, 655356, 15, 0, 655357, 10, 0, 655358, 15, 0, 655359, 10, 0, 589824, 10, 0, 589825, 15, 0, 589826, 10, 0, 589827, 10, 0, 589828, 15, 0, 589829, 10, 0, 589830, 15, 0, 589831, 15, 0, 589832, 15, 0, 589833, 15, 0, 589834, 10, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 720878, 15, 0, 720879, 15, 0, 720880, 10, 0, 720881, 15, 0, 720882, 15, 0, 720883, 15, 0, 720884, 15, 0, 720885, 15, 0, 720886, 15, 0, 720887, 10, 0, 720888, 15, 0, 720889, 10, 0, 720890, 15, 0, 720891, 10, 0, 720892, 15, 0, 720893, 10, 0, 720894, 10, 0, 720895, 10, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 0, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 0, 655368, 15, 0, 655369, 10, 0, 655370, 10, 0, 655371, 10, 0, 655372, 15, 0, 655373, 15, 0, 786414, 15, 0, 786415, 15, 0, 786416, 15, 0, 786417, 15, 0, 786418, 15, 0, 786419, 15, 0, 786420, 15, 0, 786421, 15, 0, 786422, 15, 0, 786423, 10, 0, 786424, 15, 0, 786425, 15, 0, 786426, 15, 0, 786427, 15, 0, 786428, 15, 0, 786429, 15, 0, 786430, 15, 0, 786431, 15, 0, 720896, 15, 0, 720897, 15, 0, 720898, 15, 0, 720899, 15, 0, 720900, 15, 0, 720901, 15, 0, 720902, 15, 0, 720903, 15, 0, 720904, 15, 0, 720905, 15, 0, 720906, 15, 0, 720907, 15, 0, 720908, 15, 0, 720909, 15, 0, 851950, 15, 0, 851951, 15, 0, 851952, 15, 0, 851953, 15, 0, 851954, 15, 0, 851955, 15, 0, 851956, 15, 0, 851957, 15, 0, 851958, 15, 0, 851959, 10, 0, 851960, 15, 0, 851961, 15, 0, 851962, 15, 0, 851963, 15, 0, 851964, 15, 0, 851965, 15, 0, 851966, 15, 0, 851967, 15, 0, 786432, 15, 0, 786433, 15, 0, 786434, 15, 0, 786435, 15, 0, 786436, 15, 0, 786437, 15, 0, 786438, 15, 0, 786439, 15, 0, 786440, 15, 0, 786441, 15, 0, 786442, 15, 0, 786443, 15, 0, 786444, 15, 0, 786445, 15, 0 )

[node name="6" type="Sprite" parent="TileMap"]
position = Vector2( -256, 192 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="TileMap"]
margin_left = -272.0
margin_top = 144.0
margin_right = -128.0
margin_bottom = 241.0
rect_rotation = -0.285097
custom_fonts/font = SubResource( 1 )
text = "krfos._.art"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -288, -96 )
anchor_mode = 0
current = true
zoom = Vector2( 0.4, 0.42 )

[node name="Passdoor" parent="." instance=ExtResource( 1 )]
position = Vector2( -128, 0 )

[node name="Passkey6" parent="." instance=ExtResource( 4 )]
position = Vector2( -80, 112 )

[node name="Wall Priz6" parent="." instance=ExtResource( 9 )]
position = Vector2( -144, 192 )

[node name="Player6" parent="." instance=ExtResource( 8 )]
position = Vector2( -112, 160 )

[node name="Enemy1" parent="." instance=ExtResource( 10 )]
position = Vector2( -160, 80 )

[node name="Enemy2" parent="." instance=ExtResource( 10 )]
position = Vector2( 16, 0 )

[node name="Enemy3" parent="." instance=ExtResource( 10 )]
position = Vector2( -16, -64 )

[node name="Enemy4" parent="." instance=ExtResource( 10 )]
position = Vector2( 64, 80 )

[node name="Enemy5" parent="." instance=ExtResource( 10 )]
position = Vector2( 176, -64 )

[node name="Enemy6" parent="." instance=ExtResource( 10 )]
position = Vector2( 48, 160 )

[node name="Enemy7" parent="." instance=ExtResource( 10 )]
position = Vector2( -16, 112 )

[node name="Enemy8" parent="." instance=ExtResource( 10 )]
position = Vector2( -240, 144 )

[node name="Enemy9" parent="." instance=ExtResource( 10 )]
position = Vector2( -224, -32 )
